Clean up the job detail template. Aded resolver helper to offer quick erb call to insert edit/view links

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -61,3 +61,32 @@
     float:right;
   }
 }
+
+// Details styles
+.job-status {
+  font-weight: bold;
+  font-size: 1.2em;
+
+  .controls {
+    &.job-status-completed {
+      color: @successText;
+    }
+
+    &.job-status-canceled {
+      color: @errorText;
+    }
+
+    &.job-status-queued {
+      color: @warningText;
+    }
+
+    &.job-status-running {
+      color: @infoText;
+    }
+
+    &.job-status-errored {
+      color: @errorText;
+    }
+  }
+
+}
