--- a/frontend/app/views/shared/_sidebar_entry.html.erb
+++ b/frontend/app/views/shared/_sidebar_entry.html.erb
@@ -6,4 +6,4 @@
                   :default => I18n.t("#{subrecord_type}._plural"))
 %>
 
-<li><a href="#<%= anchor %>"><%= title %> <span class="icon-chevron-right"></span></a></li>
+<li class="sidebar-entry-<%= anchor %>"><a href="#<%= anchor %>"><%= title %> <span class="icon-chevron-right"></span></a></li>
