WIP spool log to the job details page

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -102,3 +102,11 @@
     }
   }
 }
+#logSpool {
+  background-color: #333;
+  color: #3e3;
+  font-family: monospace;
+  height: 300px;
+  overflow: scroll;
+  padding: 4px 10px;
+}
