--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -18,10 +18,10 @@
         <%= readonly.emit_template "job", @job %>
 
         <% if !["queued", "canceled"].include?(@job.status) %>
-          <section id="logs">
+          <section id="logs" data-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
             <h3 class="subrecord-form-heading"><%= I18n.t("job._frontend.section.logs") %></h3>
             <div class="subrecord-form-container">
-              <div class="alert alert-info">TODO</div>
+              <pre id="logSpool"></pre>
             </div>
           </section>
         <% end %>
