Poll the Job status to ensure user is notified of a change in state - offer to refresh the page when a state change occurs

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -77,28 +77,27 @@
 .job-status-canceled {
   .job-status {
     .controls {
-      color: @successText;
     }
   }
 }
 .job-status-queued {
   .job-status {
     .controls {
-      color: @successText;
+      color: @warningText;
     }
   }
 }
 .job-status-running {
   .job-status {
     .controls {
-      color: @successText;
+      color: @infoText;
     }
   }
 }
-.job-status-errored {
+.job-status-failed {
   .job-status {
     .controls {
-      color: @successText;
+      color: @errorText;
     }
   }
 }
