--- a/frontend/app/assets/stylesheets/archivesspace/sidebar.less
+++ b/frontend/app/assets/stylesheets/archivesspace/sidebar.less
@@ -67,6 +67,14 @@
   .alert-error a {
     .transition(~"background-color 1s, color 1s");
   }
+  .alert {
+    padding: 8px 14px 8px 14px;
+    margin: 0;
+
+    .btn {
+      width: 100%;
+    }
+  }
 }
 
 .nav-list .form-actions {
