--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -18,8 +18,15 @@
         <%= readonly.emit_template "job", @job %>
 
         <% if !["queued", "canceled"].include?(@job.status) %>
-          <section id="logs" data-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
-            <h3 class="subrecord-form-heading"><%= I18n.t("job._frontend.section.logs") %></h3>
+          <section id="logs" data-poll-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
+            <h3 class="subrecord-form-heading">
+              <%= I18n.t("job._frontend.section.logs") %>
+              <% if @job.status === "running" %>
+                <div class="btn-group pull-right">
+                  <button class="btn btn-small active btn-follow-log">Follow</button>
+                </div>
+              <% end %>
+            </h3>
             <div class="subrecord-form-container">
               <pre id="logSpool"></pre>
             </div>
@@ -38,7 +45,3 @@
     </div>
   </div>
 </div>
-
-<hr/>
-
-<pre><%= @job.inspect %></pre>
