Show generated records for a completed import job

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -16,6 +16,7 @@
 @import "archivesspace/tables";
 @import "archivesspace/tree";
 @import "archivesspace/notes";
+@import "archivesspace/icons";
 @import "archivesspace/jobs";
 @import "datepicker";
 @import "combobox";
