--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -108,4 +108,12 @@
   height: 300px;
   overflow: scroll;
   padding: 4px 10px;
+  margin-top: 10px;
+}
+
+#jobRecordsSpool {
+  min-height: 270px;
+  .pagination {
+    margin-top: 10px;
+  }
 }
