--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -18,7 +18,7 @@
         <%= readonly.emit_template "job", @job %>
 
         <% if !["queued", "canceled"].include?(@job.status) %>
-          <section id="logs" data-poll-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
+          <section id="logs" class="subrecord-form-dummy" data-poll-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
             <h3 class="subrecord-form-heading">
               <%= I18n.t("job._frontend.section.logs") %>
               <% if @job.status === "running" %>
@@ -34,10 +34,10 @@
         <% end %>
 
         <% if @job.status === "completed" %>
-          <section id="generated_uris">
+          <section id="generated_uris" class="subrecord-form-dummy" data-url="<%= url_for(:controller => :jobs, :action => :records, :id => @job.id, :page => 1) %>">
             <h3 class="subrecord-form-heading"><%= I18n.t("job._frontend.section.generated_uris") %></h3>
             <div class="subrecord-form-container">
-              <div class="alert alert-info">TODO</div>
+              <div id="jobRecordsSpool"></div>
             </div>
           </section>
         <% end %>
