Create an archivesspace/variables.less to store any app specific variables.  Currently this only stores the icon positions... but will be expanded to include many things :)

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -1,5 +1,4 @@
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@import "archivesspace/variables";
 
 @import "archivesspace/common";
 @import "archivesspace/accordion";
