--- a/frontend/app/assets/stylesheets/archivesspace/icons.less
+++ b/frontend/app/assets/stylesheets/archivesspace/icons.less
@@ -1,13 +1,13 @@
-.icon-agent_person {background-position: -168px 0;}
-.icon-agent_software {background-position: -360px -144px;}
-.icon-agent_corporate_entity {background-position: -432px -144px;}
-.icon-agent_family {background-image: asset-url('archivesspace/icon-family.png'); background-position: 0 0;}
-.icon-resource {background-position: -264px -24px;}
-.icon-archival_object {background-position: -24px -24px;}
-.icon-digital_object {background-position: -384px -120px;}
-.icon-digital_object_component {background-position: -456px -24px;}
-.icon-accession {background-position: -168px -24px;}
-.icon-subject {background-position: 0 -48px;}
-.icon-classification {background-position: -25px -48px;}
-.icon-classification_term {background-position: 0 -48px;}
-.icon-location {background-position: -24px -72px;}
+.icon-agent_person {background-position: @iconAgentPersonBackgroundPosition;}
+.icon-agent_software {background-position: @iconAgentSoftwareBackgroundPosition;}
+.icon-agent_corporate_entity {background-position: @iconAgentCorporateEntityBackgroundPosition;}
+.icon-agent_family {background-image: @iconAgentFamilyBackgroundImage; background-position: @iconAgentFamilyBackgroundPosition;}
+.icon-resource {background-position: @iconResourceBackgroundPosition;}
+.icon-archival_object {background-position: @iconArchivalObjectBackgroundPosition;}
+.icon-digital_object {background-position: @iconDigitalObjectBackgroundPosition;}
+.icon-digital_object_component {background-position: @iconDigitalObjectComponentBackgroundPosition;}
+.icon-accession {background-position: @iconAccessionBackgroundPosition;}
+.icon-subject {background-position: @iconSubjectBackgroundPosition;}
+.icon-classification {background-position: @iconClassificationBackgroundPosition;}
+.icon-classification_term {background-position: @iconClassificationTermBackgroundPosition;}
+.icon-location {background-position: @iconLocationBackgroundPosition;}
