--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -1,4 +1,4 @@
-@import "variables";
+@import "archivesspace/variables";
 
 // Listing styles
 .table-import-jobs {
@@ -106,7 +106,7 @@
   color: #3e3;
   font-family: monospace;
   height: 300px;
-  overflow: scroll;
+  overflow: auto;
   padding: 4px 10px;
   margin-top: 10px;
 }
