--- a/frontend/app/assets/stylesheets/themes/hudmol/application.less
+++ b/frontend/app/assets/stylesheets/themes/hudmol/application.less
@@ -1,5 +1,5 @@
 // twitter bootstrap
-@import "twitter/bootstrap/variables";
+@import "archivesspace/variables";
 @import "twitter/bootstrap/mixins";
 
 // default skin
