--- a/frontend/app/views/jobs/_listing.html.erb
+++ b/frontend/app/views/jobs/_listing.html.erb
@@ -1,10 +1,10 @@
 <table id="tabledSearchResults" class="table table-bordered table-striped table-condensed table-search-results table-import-jobs">
   <thead>
   <tr>
-    <th>Status</th>
-    <th>Import Type</th>
-    <th class="filenames">Filename(s)</th>
-    <th class="audit-info">Audit Data</th>
+    <th><%= I18n.t("job.status") %></th>
+    <th><%= I18n.t("job.import_type") %></th>
+    <th class="filenames"><%= I18n.t("job.filenames") %></th>
+    <th class="audit-info"><%= I18n.t("job._frontend.audit_data") %></th>
     <th class="actions"></th>
   </tr>
   </thead>
@@ -21,10 +21,10 @@
       <td>
         <small>
           <dl>
-            <dt>Submitted By</dt><dd><%= job["owner"] %></dd>
-            <dt>Time Submitted</dt><dd><%= Time.parse(job["time_submitted"]).getlocal %></dd>
-            <% if job["time_started"] %><dt>Time Started</dt><dd><%= Time.parse(job["time_started"]).getlocal %></dd><% end %>
-            <% if job["time_finished"] %><dt>Time Finished</dt><dd><%= Time.parse(job["time_finished"]).getlocal %></dd><% end %>
+            <dt><%= I18n.t("job.owner") %></dt><dd><%= job["owner"] %></dd>
+            <dt><%= I18n.t("job.time_submitted") %></dt><dd><%= Time.parse(job["time_submitted"]).getlocal %></dd>
+            <% if job["time_started"] %><dt><%= I18n.t("job.time_started") %></dt><dd><%= Time.parse(job["time_started"]).getlocal %></dd><% end %>
+            <% if job["time_finished"] %><dt><%= I18n.t("job.time_finished") %></dt><dd><%= Time.parse(job["time_finished"]).getlocal %></dd><% end %>
           </dl>
         </small>
       </td>
