--- a/frontend/app/views/jobs/_show_templates.html.erb
+++ b/frontend/app/views/jobs/_show_templates.html.erb
@@ -55,28 +55,28 @@
 
 <div id="template_job_running_notice"><!--
   <div class="alert alert-info">
-    <p>The import job has started running.</p>
-    <button class="btn btn-primary btn-refresh">Refresh Page</button>
+    <p><%= I18n.t("job._frontend.messages.status_changed_running") %></p>
+    <button class="btn btn-primary btn-refresh"><%= I18n.t("actions.refresh_page") %></button>
   </div>
 --></div>
 
 <div id="template_job_completed_notice"><!--
   <div class="alert alert-success">
-    <p>The import job has completed.</p>
-    <button class="btn btn-success btn-refresh">Refresh Page</button>
+    <p><%= I18n.t("job._frontend.messages.status_changed_completed") %></p>
+    <button class="btn btn-success btn-refresh"><%= I18n.t("actions.refresh_page") %></button>
   </div>
 --></div>
 
 <div id="template_job_failed_notice"><!--
   <div class="alert alert-error">
-    <p>The import job has failed.</p>
-    <button class="btn btn-danger btn-refresh">Refresh Page</button>
+    <p><%= I18n.t("job._frontend.messages.status_changed_failed") %></p>
+    <button class="btn btn-danger btn-refresh"><%= I18n.t("actions.refresh_page") %></button>
   </div>
 --></div>
 
-<div id="template_job_completed_notice"><!--
+<div id="template_job_canceled_notice"><!--
   <div class="alert alert-error">
-    <p>The import job has been canceled.</p>
-    <button class="btn btn-danger btn-refresh">Refresh Page</button>
+    <p><%= I18n.t("job._frontend.messages.status_canceled_completed") %></p>
+    <button class="btn btn-danger btn-refresh"><%= I18n.t("actions.refresh_page") %></button>
   </div>
 --></div>
