--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -23,7 +23,7 @@
               <%= I18n.t("job._frontend.section.logs") %>
               <% if @job.status === "running" %>
                 <div class="btn-group pull-right">
-                  <button class="btn btn-small active btn-follow-log">Follow</button>
+                  <button class="btn btn-small active btn-follow-log"><%= I18n.t("job._frontend.actions.follow_log") %></button>
                 </div>
               <% end %>
             </h3>
