--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -17,7 +17,7 @@
         <%= readonly.emit_template "job_status", @job %>
         <%= readonly.emit_template "job", @job %>
 
-        <% if !["queued", "canceled"].include?(@job.status) %>
+        <% if !["queued"].include?(@job.status) %>
           <section id="logs" class="subrecord-form-dummy" data-poll-url="<%= url_for(:controller => :jobs, :action => :log, :id => @job.id) %>">
             <h3 class="subrecord-form-heading">
               <%= I18n.t("job._frontend.section.logs") %>
