redirect back to an accession after adding an event to it

--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -2,6 +2,12 @@
 
 <%= form_for @event, :as => "event", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
   <%= form_context :event, @event do |form| %>
+
+    <% if !@event.linked_records.first.nil? %>
+      <%= @event.linked_records.first['ref'].inspect  %>
+      <input type="hidden" name="redirect_record" value="<%= @event.linked_records.first['ref'] %>" />
+    <% end %>
+
     <div class="row-fluid">
       <div class="span3">
         <%= render :partial => "sidebar" %>
