Add some validation rules to the job schema so errors are shown when no files are provided etc

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -62,6 +62,12 @@
   }
 }
 
+#job_filenames_.error {
+  #files {
+    border-color: @errorBackground;
+  }
+}
+
 // Details styles
 .job-status {
   font-weight: bold;
