--- a/frontend/app/views/jobs/_toolbar.html.erb
+++ b/frontend/app/views/jobs/_toolbar.html.erb
@@ -1,4 +1,4 @@
-<% if user_can?('cancel_importer_job') && ["queued", "running"].include?(@job.status) %>
+<% if user_can?('cancel_importer_job') && ["queued", "running"].include?(@job.status) && "true" == AppConfig[:import_jobs_cancelable].to_s %>
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
