Okidokes.  So the jquery.Multifile plugin didn't work in IE.  Soooo... I rewrote our own mutlifile uploader in the simplest way I could.. by allowing the addition of multiple file inputs.
IE8 also doesn't play nice with ajaxed file uploads and the AjaxForm plugin magically reverts to the trusted iframe mechanism for uploading.  This requires some extra response formatting in our controller. Namely, when we detect an iframePOST, we wrap the result in a <textarea>.  The javascript then parses this <textarea> for either the json or html content.

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -43,21 +43,25 @@
     border: 2px solid #7DF;
   }
 
-  .MultiFile-label {
+  .import-file {
     display: block;
     border-top: 1px solid #F3F3F3;
     padding: 10px;
+
+    input {
+      display: none;
+    }
   }
 
-  .MultiFile-label:nth-child(2n-1) {
+  .import-file:nth-child(2n-1) {
     background-color: #FAFAFA;
   }
 
-  .MultiFile-label:last-child {
+  .import-file:last-child {
     border-bottom: 1px solid #F3F3F3;
   }
 
-  .MultiFile-remove {
+  .btn-remove-file {
     float:right;
   }
 }
