Only allow mutlitple subjets/agents to be added via the linker for new associations

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -603,6 +603,7 @@ ul.subrecord-form-list {
     opacity: 1;
     color: #CCC;
     height: 30px;
+    line-height: 30px;
     text-decoration: none;
 
     &.has-label {
