--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -1,9 +1,12 @@
 <%
-   if form.obj.has_key?('_resolved')
-     selected_json =  form.obj['_resolved'].to_json
-   else
-     selected_json = "{}"
-   end
+  # Allow multiple subjects to be linked if it's an empty linker
+  if form.obj.has_key?('_resolved')
+    selected_json =  form.obj['_resolved'].to_json
+    multiplicity =  "one"
+  else
+    selected_json = "[]"
+    multiplicity =  "many"
+  end
 
   data_path = form.path
   data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
@@ -13,7 +16,7 @@
 %>
 
 <div class="control-group required">
-   <label class="control-label"><%= I18n.t("subject._singular") %></label>
+   <label class="control-label"><%= I18n.t("subject._plural") %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
           <input type="text" class="linker"
@@ -26,7 +29,8 @@
             data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.SUBJECT_FACETS, :sort => "title_sort asc", :exclude => exclude_ids %>"
             data-selected="<%= selected_json %>"
             data-format_template="title"
-            data-multiplicity="one"
+            data-multiplicity="<%= multiplicity %>"
+            <% if multiplicity === "many" %>data-sortable="true"<% end %>
             data-types='["subject"]'
             data-exclude='<%= exclude_ids.to_json %>'
           />
