--- a/public/app/views/records/accession.html.erb
+++ b/public/app/views/records/accession.html.erb
@@ -1,16 +1,9 @@
 <%
   set_title(@accession.display_string)
 %>
-<div class="title-pane">
-  <div class="row-fluid">
-    <div class="span3">
-
-    </div>
-    <div class="span9">
-      <h2><%= @accession.display_string %></h2>
-    </div>
-  </div>
-</div>
+<%= render(:partial => 'title_pane',
+           :locals => {:record_title => @accession.display_string}) 
+%>
 <div class="content-pane">
   <div class="row-fluid">
     <div class="span3">
