--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -2,17 +2,9 @@
    record_title = @digital_object_component.display_string
    set_title(record_title)
 %>
-
-<div class="title-pane">
-  <div class="row-fluid">
-    <div class="span3">
-
-    </div>
-    <div class="span9">
-      <h2><%= record_title %></h2>
-    </div>
-  </div>
-</div>
+<%= render(:partial => 'title_pane',
+           :locals => {:record_title => record_title}) 
+%>
 <div class="content-pane">
   <div class="row-fluid">
     <div class="span3">
