--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
     <% end %>
   <% end %>
 
+  <script>
+    FRONTEND_URL = "<%= j(AppConfig[:frontend_url]) %>";
+    PUBLIC_URL = "<%= j(AppConfig[:public_url]) %>";
+  </script>
+
 </head>
 
 <body data-spy="scroll" data-target="#archivesSpaceSidebar" data-offset="20">
