--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -200,6 +200,12 @@
   </div>
 --></div>
 
+<div id="update_monitor_repository_changed_message_template"><!--
+  <div class="alert alert-warning update-monitor-error">
+    <%= I18n.t("update_monitor.repository_changed") %>
+  </div>
+--></div>
+
 <div id="as_nav_list_errors_item_template"><!--
   <li class='alert-error update-monitor-error'>
     <a href='#form_messages'><%= I18n.t("errors.sidebar_label") %> <span class='icon-chevron-right'></span></a>
