add a configuration pair for proxy urls

--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
   <% end %>
 
   <script>
-    FRONTEND_URL = "<%= j(AppConfig[:frontend_url]) %>";
-    PUBLIC_URL = "<%= j(AppConfig[:public_url]) %>";
+    FRONTEND_URL = "<%= j(AppConfig[:frontend_proxy_url]) %>";
+    PUBLIC_URL = "<%= j(AppConfig[:public_proxy_url]) %>";
   </script>
 
 </head>
