Template syntax fix

--- a/frontend/app/views/jobs/show.html.erb
+++ b/frontend/app/views/jobs/show.html.erb
@@ -43,7 +43,7 @@
             <h3 class="subrecord-form-heading"><%= I18n.t("job._frontend.section.generated_uris") %></h3>
             <div class="subrecord-form-container">
               <div id="jobRecordsSpool">
-                <div class="alert alert-info">I18n.t("actions.loading") %></div>
+                <div class="alert alert-info"><%= I18n.t("actions.loading") %></div>
               </div>
             </div>
           </section>
