Add icons for event and collection management as they display in the job records list

--- a/frontend/app/assets/stylesheets/archivesspace/icons.less
+++ b/frontend/app/assets/stylesheets/archivesspace/icons.less
@@ -11,3 +11,5 @@
 .icon-classification {background-position: @iconClassificationBackgroundPosition;}
 .icon-classification_term {background-position: @iconClassificationTermBackgroundPosition;}
 .icon-location {background-position: @iconLocationBackgroundPosition;}
+.icon-event {background-position: @iconEventBackgroundPosition;}
+.icon-collection_management {background-position: @iconCollectionManagementBackgroundPosition;}
