--- a/frontend/app/assets/stylesheets/archivesspace/variables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/variables.less
@@ -20,3 +20,5 @@
 @iconClassificationBackgroundPosition: -25px -48px;
 @iconClassificationTermBackgroundPosition: 0 -48px;
 @iconLocationBackgroundPosition: -24px -72px;
+@iconEventBackgroundPosition: -192px -120px;
+@iconCollectionManagementBackgroundPosition: -96px -72px;
