--- a/frontend/app/views/jobs/_job_records.html.erb
+++ b/frontend/app/views/jobs/_job_records.html.erb
@@ -1,8 +1,16 @@
 <% if @search_data['results'].length > 0 %>
   <div class="subrecord-form-fields">
     <% @search_data['results'].each do |result| %>
+      <%
+         record_title = result["record"]["_resolved"]["title"]
+         if "event" == result["record"]["_resolved"]["jsonmodel_type"]
+           record_title = "#{I18n.t("event._singular")}: #{I18n.t("enumerations.event_event_type.#{result["record"]["_resolved"]["event_type"]}")}"
+         elsif "collection_management" == result["record"]["_resolved"]["jsonmodel_type"]
+           record_title = "#{I18n.t("collection_management._singular")}"
+         end
+      %>
       <div>
-        <span class="icon icon-<%= result["record"]["_resolved"]["jsonmodel_type"] %>" title="<%= I18n.t("#{result["record"]["_resolved"]["jsonmodel_type"]}._singular") %>"></span> <%= resolve_readonly_link_to result["record"]["_resolved"]["title"], result["record"]["ref"] %>
+        <span class="icon icon-<%= result["record"]["_resolved"]["jsonmodel_type"] %>" title="<%= I18n.t("#{result["record"]["_resolved"]["jsonmodel_type"]}._singular") %>"></span> <%= resolve_readonly_link_to record_title, result["record"]["ref"] %>
       </div>
     <% end %>
   </div>
