--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -3,7 +3,8 @@
 <%= form_for @event, :as => "event", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
   <%= form_context :event, @event do |form| %>
 
-    <% if !@event.linked_records.first.nil? %>
+    <% if !@event.linked_records.first.nil? && @event.linked_records.first.has_key?('ref') %>
+      <%= @event.linked_records.first['ref'].inspect  %>
       <input type="hidden" name="redirect_record" value="<%= @event.linked_records.first['ref'] %>" />
       <input type="hidden" name="redirect_action" value="<%= @redirect_action %>" />
     <% end %>
