--- a/plugins/aspace_feedback/frontend/views/site/_footer.html.erb
+++ b/plugins/aspace_feedback/frontend/views/site/_footer.html.erb
@@ -1,4 +1,4 @@
-<link href="<%= "#{root_path}assets/aspace_feedback.css" %>" media="all" rel="stylesheet" type="text/css">
+<%= stylesheet_link_tag 'aspace_feedback.css' %>
 
 <div class="container footer">
    <div class="row-fluid">
@@ -12,4 +12,4 @@
   <%= render :partial => "site/feedback_form.html" %>
 --></div>
 
-<script src="<%= "#{root_path}assets/aspace_feedback.js" %>"></script>
+<%= javascript_include_tag "aspace_feedback.js" %>
