Fix RDE css/js resources to handle a prefix in the path. And fix the kiketable plugin css not being packaged for prod

--- a/frontend/app/assets/stylesheets/archivesspace/rde.less
+++ b/frontend/app/assets/stylesheets/archivesspace/rde.less
@@ -1,7 +1,7 @@
 @import "archivesspace/variables";
 @import "twitter/bootstrap/mixins";
 
-@import "../jquery.kiketable.colsizable.css";
+@import asset-path("jquery.kiketable.colsizable.css");
 
 #rde_form {
   .sections {
