--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= include_theme_css %>
   <%= csrf_meta_tags %>
   <script>
-    APP_PATH = "<%= j(root_path) %>";
+    APP_PATH = "<%= j(AppConfig[:frontend_prefix]) %>";
     COOKIE_PREFIX = "<%= j(AppConfig[:cookie_prefix]) %>";
   </script>
 
