--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -6,6 +6,20 @@
   <%= favicon_link_tag %>
   <%= include_theme_css %>
   <%= csrf_meta_tags %>
+
+  <% if ENV["TEST_MODE"] %>
+    <script>
+      TEST_ERRORS = [];
+      window.onerror = function(errorMsg, url, lineNo) {
+        TEST_ERRORS.push({
+          message: errorMsg,
+          url: url,
+          line: lineNo
+        })
+      }
+    </script>
+  <% end %>
+
   <script>
     APP_PATH = "<%= j(root_path) %>";
     COOKIE_PREFIX = "<%= j(AppConfig[:cookie_prefix]) %>";
